Changelog
=========

4.2.dev0 - (unreleased)
-----------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]
* Change: Remove unused css
  [petchesi-iulian refs #88382]

4.1 - (2017-11-07)
------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

4.0 - (2017-09-26)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for EEA Annotator
* Feature: Possibility to disable 'exactMatch' per content-type
  [avoinea refs #88339]

3.9 - (2017-08-16)
------------------
* Bug fix: fixed depiction for Dexterity content type
  [zoltan_andras refs #81209]

3.8 - (2017-05-15)
------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

3.7 - (2017-04-24)
------------------
* Change: updated package information
  [eduard-fironda]

3.6 - (2016-09-26)
------------------
* Bug fix: Fix profiles version
  [avoinea]

3.5 - (2016-07-07)
------------------
* Change: Add dual Plone 4 and 5 support for custom portlet
  [davilima6]
* Change: Add extra GS profiles to support Plone 4 and 5 in the same branch
  [davilima6]
* Change: Load resource dependencies in own bundle, porting render conditions
  from Plone 4 and enabling full compatibility with Plone 5
  [davilima6]
* Change: Migrate configlet, portlet and content rule from formlib to z3c.form
  [davilima6]

3.4 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

3.3 - (2015-08-18)
------------------
* Change: updated accordion eea-icon override with latest changes from eea.design
  [ichimdav refs #27215]

3.2 - (2015-07-06)
------------------
* Change: updated accordion eea-icon override with latest changes from eea.design
  [ichimdav refs #26378]

3.1 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]