@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<registry>
-
-  <records prefix="plone.resources/eea.annotator"
-      interface='Products.CMFPlone.interfaces.IResourceRegistry' remove="true" />
-
-  <records prefix="plone.bundles/eea.annotator"
-      interface="Products.CMFPlone.interfaces.IBundleRegistry" remove="true" />
-
-</registry>
